# dto/role.go
@@ -1,0 +1,10 @@
+package dto
+
+type GetRoleByIdSpec struct {
+	Id string `json:"id"`
+}
+
+type RoleResponse struct {
+	Id   string `json:"id"`
+	Name string `json:"name"`
+}
