# dto/user.go
@@ -1,0 +1,12 @@
+package dto
+
+type CreateUserRequest struct {
+	Name     string `json:"name" validate:"required"`
+	Email    string `json:"email" validate:"required,email"`
+	Password string `json:"password" validate:"required"`
+	RoleId   string `json:"role_id" validate:"required"`
+}
+
+type CreateUserResponse struct {
+	Id string `json:"id"`
+}
