# handler/auth.go
@@ -23,6 +23,14 @@ func (h *AuthHandler) Routes(group fiber.Router) {
 	group.Post("/logout", h.Logout)
 }
 
+//	@Summary		Login
+//	@Description	Login
+//	@Tags			Auth
+//	@Accept			json
+//	@Produce		json
+//	@Param			payload	body		dto.LoginRequest	true	"Login data"
+//	@Success		200		{object}	global.Response[dto.LoginResponse]
+//	@Router			/login [post]
 func (h *AuthHandler) Login(c fiber.Ctx) error {
 	var req dto.LoginRequest
 	if err := helper.ValidateBody(c, &req); err != nil {
@@ -37,6 +45,14 @@ func (h *AuthHandler) Login(c fiber.Ctx) error {
 	return global.CreateResponse(res, fiber.StatusOK, c)
 }
 
+//	@Summary		Refresh token
+//	@Description	Refresh token
+//	@Tags			Auth
+//	@Accept			json
+//	@Produce		json
+//	@Param			payload	body		dto.RefreshTokenRequest	true	"RefreshToken data"
+//	@Success		200		{object}	global.Response[dto.LoginResponse]
+//	@Router			/refresh-token [post]
 func (h *AuthHandler) RefreshToken(c fiber.Ctx) error {
 	var req dto.RefreshTokenRequest
 	if err := helper.ValidateBody(c, &req); err != nil {
@@ -51,6 +67,13 @@ func (h *AuthHandler) RefreshToken(c fiber.Ctx) error {
 	return global.CreateResponse(res, fiber.StatusOK, c)
 }
 
+//	@Summary		Logout
+//	@Description	Logout
+//	@Tags			Auth
+//	@Accept			json
+//	@Produce		json
+//	@Success		200	{object}	global.Response[dto.Message]
+//	@Router			/logout [post]
 func (h *AuthHandler) Logout(c fiber.Ctx) error {
 	// Optional: extract user ID from locals if we need to do something in DB
 	// userId := c.Locals("user_id").(string)
